--- a/weddingCard.html
+++ b/weddingCard.html
@@ -118,7 +118,7 @@
 <body>
 
   <header>
-    <h1>💍 Mani & Indhu</h1>
+    <h1>💍 Indhu & Mani</h1>
     <p>We joyfully invite you to our wedding celebration</p>
     <p><b>26th November 2025 | 5:00 AM</b></p>
   </header>
@@ -187,3 +187,4 @@
 
 </body>
 </html>
+
