--- a/weddingCard.html
+++ b/weddingCard.html
@@ -141,7 +141,7 @@
         <p>2-2-27, Venkayyapeta (Village), Korlakota (Post), Amadalavalasa (Mandal), Srikakulam (District)</p>
         <p><b>Bhojanlu:</b> 25 Nov, 6:00 PM</p>
         <p><b>Marriage:</b> 26 Nov, 5:00 AM</p>
-        <a class="map-link" href="https://maps.app.goo.gl/WVyiNyZnBYUWf48y9" target="_blank">View on Map</a>
+        <a class="map-link" href="https://maps.app.goo.gl/Nzt3ZYWVp2fxScz36" target="_blank">View on Map</a>
       </div>
     </div>
   </section>
@@ -150,7 +150,7 @@
     <h2>Wedding Venue</h2>
     <div class="card">
       <p>Marriage & Celebrations at Groom's Home</p>
-      <a class="map-link" href="https://maps.app.goo.gl/WVyiNyZnBYUWf48y9" target="_blank">View Venue</a>
+      <a class="map-link" href="https://maps.app.goo.gl/Nzt3ZYWVp2fxScz36" target="_blank">View Venue</a>
     </div>
   </section>
 
@@ -187,4 +187,5 @@
 
 </body>
 </html>
+
 
