--- a/weddingCard.html
+++ b/weddingCard.html
@@ -139,7 +139,7 @@
         <p>Mani Yenni</p>
         <p>Father: Dalinaidu</p>
         <p>2-2-27, Venkayyapeta (Village), Korlakota (Post), Amadalavalasa (Mandal), Srikakulam (District)</p>
-        <p><b>Bhojanlu:</b> 25 Nov, 6:00 PM</p>
+        <p><b>Lunch:</b> 25 Nov, 6:00 PM</p>
         <p><b>Marriage:</b> 26 Nov, 5:00 AM</p>
         <a class="map-link" href="https://maps.app.goo.gl/Nzt3ZYWVp2fxScz36" target="_blank">View on Map</a>
       </div>
@@ -187,5 +187,6 @@
 
 </body>
 </html>
+
 
 
