--- a/weddingCard.html
+++ b/weddingCard.html
@@ -130,15 +130,15 @@
         <h3>🏠 Bride’s Home</h3>
         <p>Indhu Pydi</p>
         <p>Father: Janardhana Rao</p>
-        <p>Plot-32, Lakshmi Nagar Colony, Chapuram, Balaga (Rural), Srikakulam, Andhra Pradesh, 532001</p>
+        <p>No:G2, RS Devi Complex, ramalaxmana, junction, GT Rd, opp. Relax hotel, Indira Nagar Colony, Visakha B Colony, Radha Krishna Nagar Colony, Srikakulam, Andhra Pradesh 532001</p>
         <p><b>Reception:</b> 23 Nov, 8:00 AM</p>
-        <a class="map-link" href="https://maps.app.goo.gl/q6g8PFjXHgBH97wZA" target="_blank">View on Map</a>
+        <a class="map-link" href="https://maps.app.goo.gl/ZqgNAyXSsUGM6ttV7" target="_blank">View on Map</a>
       </div>
       <div class="card">
         <h3>🏠 Groom’s Home</h3>
         <p>Mani Yenni</p>
         <p>Father: Dalinaidu</p>
-        <p>2-2-27, Venkayyapeta (Village), Korlakota (Post), Amadalavalasa (Mandal), Srikakulam (District)</p>
+        <p>2-2-27, Venkayyapeta (Village), Korlakota (Post), Amadalavalasa (Mandal), Srikakulam (District), Andhra Pradesh 532185</p>
         <p><b>Lunch:</b> 25 Nov, 6:00 PM</p>
         <p><b>Marriage:</b> 26 Nov, 5:00 AM</p>
         <a class="map-link" href="https://maps.app.goo.gl/Nzt3ZYWVp2fxScz36" target="_blank">View on Map</a>
@@ -187,6 +187,7 @@
 
 </body>
 </html>
+
 
 
 
