--- a/weddingCard.html
+++ b/weddingCard.html
@@ -118,9 +118,9 @@
 <body>
 
   <header>
-    <h1>💍 Indhu & Mani</h1>
+    <h1>💍 Indhu <br /> & <br /> Mani</h1>
     <p>We joyfully invite you to our wedding celebration</p>
-    <p><b>26th November 2025 | 5:00 AM</b></p>
+    <p><b>25th November 2025</b></p>
   </header>
 
   <section>
@@ -187,6 +187,7 @@
 
 </body>
 </html>
+
 
 
 
