--- a/weddingCard.html
+++ b/weddingCard.html
@@ -117,11 +117,15 @@
 </head>
 <body>
 
-  <header>
-    <h1>Indhu <br /> & (💍) <br /> Mani</h1>
-    <p>We joyfully invite you to our wedding celebration</p>
-    <p><b>25th November 2025</b></p>
-  </header>
+<header>
+  <h1>
+    <span style="display:inline-block; margin-right:10px;">Indhu</span> 
+    <span style="font-size:2rem; color:#ff4081;">♥</span> 
+    <span style="display:inline-block; margin-left:10px;">Mani</span>
+  </h1>
+  <p>We joyfully invite you to our wedding celebration</p>
+  <p><b>25th November 2025</b></p>
+</header>
 
   <section>
     <h2>Our Homes</h2>
@@ -187,6 +191,7 @@
 
 </body>
 </html>
+
 
 
 
