--- a/weddingCard.html
+++ b/weddingCard.html
@@ -141,7 +141,7 @@
 <header class="wedding-header">
   <h1>
     <span class="name">Indhu</span>
-    <span class="and">&</span>
+    <span class="and">❤️</span>
     <span class="name">Mani</span>
   </h1>
   <p>We joyfully invite you to our wedding celebration</p>
@@ -213,6 +213,7 @@
 
 </body>
 </html>
+
 
 
 
