--- a/weddingCard.html
+++ b/weddingCard.html
@@ -12,17 +12,13 @@
       background: linear-gradient(135deg, #fdfbfb 0%, #ebedee 100%);
       color: #2c2c2c;
       line-height: 1.6;
+      overflow-x: hidden;
     }
 
     h1, h2, h3 {
       font-family: 'Playfair Display', serif;
       color: #1a1a1a;
       margin-bottom: 10px;
-    }
-
-    a {
-      text-decoration: none;
-      color: inherit;
     }
 
     header {
@@ -32,28 +28,29 @@
       color: white;
       border-bottom-left-radius: 50% 20%;
       border-bottom-right-radius: 50% 20%;
+      position: relative;
+      overflow: hidden;
+      animation: fadeInDown 2s ease-in-out;
     }
 
+    .wedding-header .and {
+      color: #fff;
+      font-size: 1.8rem;
+      display: inline-block;
+      margin: 0 10px;
+      animation: heartbeat 1.5s infinite;
+    }
 
-.wedding-header .and {
-  color: #d63384;   /* highlight the & */
-  font-size: 1.5rem;
-  display: inline-block;
-  margin: 0 10px;
-}
-
-/* Mobile: stack names line by line */
-@media (max-width: 600px) {
-  .wedding-header h1 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .wedding-header .and {
-    margin: 10px 0;
-  }
-}
-
+    @media (max-width: 600px) {
+      .wedding-header h1 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+      .wedding-header .and {
+        margin: 10px 0;
+      }
+    }
 
     header h1 {
       font-size: 3rem;
@@ -63,6 +60,8 @@
     header p {
       font-size: 1.2rem;
       font-weight: 300;
+      opacity: 0;
+      animation: fadeIn 2s forwards;
     }
 
     section {
@@ -72,6 +71,7 @@
       background: white;
       border-radius: 20px;
       box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+      animation: fadeUp 1.5s ease-in-out;
     }
 
     section h2 {
@@ -79,6 +79,7 @@
       color: #e63971;
       margin-bottom: 25px;
       font-size: 2rem;
+      animation: pulse 2s infinite;
     }
 
     .details {
@@ -92,11 +93,13 @@
       border-radius: 15px;
       padding: 20px;
       text-align: center;
-      transition: transform 0.3s ease;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      animation: fadeIn 1.2s ease-in-out;
     }
 
     .card:hover {
-      transform: translateY(-5px);
+      transform: translateY(-8px) scale(1.02);
+      box-shadow: 0 12px 40px rgba(0,0,0,0.1);
     }
 
     .card h3 {
@@ -112,11 +115,12 @@
       color: white;
       border-radius: 25px;
       font-size: 0.9rem;
-      transition: background 0.3s ease;
+      transition: transform 0.3s ease, background 0.3s ease;
     }
 
     .map-link:hover {
       background: #c22d5d;
+      transform: scale(1.1);
     }
 
     .countdown {
@@ -125,6 +129,7 @@
       font-weight: 500;
       color: #333;
       margin-top: 15px;
+      animation: fadeIn 2s ease-in-out;
     }
 
     footer {
@@ -133,12 +138,77 @@
       margin-top: 40px;
       font-size: 0.9rem;
       color: #777;
+      animation: fadeUp 1.5s ease-in-out;
+    }
+
+    /* Floating Hearts Animation */
+    .hearts {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      overflow: hidden;
+      pointer-events: none;
+    }
+
+    .hearts span {
+      position: absolute;
+      bottom: -10px;
+      font-size: 24px;
+      animation: floatUp 6s linear infinite;
+      color: rgba(255, 255, 255, 0.8);
+    }
+
+    .hearts span:nth-child(1) { left: 20%; animation-duration: 5s; }
+    .hearts span:nth-child(2) { left: 40%; animation-duration: 6s; }
+    .hearts span:nth-child(3) { left: 60%; animation-duration: 7s; }
+    .hearts span:nth-child(4) { left: 80%; animation-duration: 4s; }
+    .hearts span:nth-child(5) { left: 50%; animation-duration: 5.5s; }
+
+    /* Keyframes */
+    @keyframes floatUp {
+      0% { transform: translateY(0) scale(0.8); opacity: 1; }
+      50% { transform: translateY(-200px) scale(1.2); opacity: 0.7; }
+      100% { transform: translateY(-400px) scale(0.9); opacity: 0; }
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    @keyframes fadeUp {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes fadeInDown {
+      from { opacity: 0; transform: translateY(-30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes heartbeat {
+      0%, 40%, 80%, 100% { transform: scale(1); }
+      20%, 60% { transform: scale(1.3); }
+    }
+
+    @keyframes pulse {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.05); }
     }
   </style>
 </head>
 <body>
 
 <header class="wedding-header">
+  <div class="hearts">
+    <span>❤️</span>
+    <span>💖</span>
+    <span>💕</span>
+    <span>💞</span>
+    <span>❤️</span>
+  </div>
   <h1>
     <span class="name">Indhu</span>
     <span class="and">❤️</span>
@@ -148,77 +218,67 @@
   <p><b>25th November 2025</b></p>
 </header>
 
-
-  <section>
-    <h2>Our Homes</h2>
-    <div class="details">
-      <div class="card">
-        <h3>🏠 Bride’s Home</h3>
-        <p>Indhu Pydi</p>
-        <p>Father: Janardhana Rao</p>
-        <p>No:G2, RS Devi Complex, ramalaxmana, junction, GT Rd, opp. Relax hotel, Indira Nagar Colony, Visakha B Colony, Radha Krishna Nagar Colony, Srikakulam, Andhra Pradesh 532001</p>
-        <p><b>Reception:</b> 23 Nov, 8:00 AM</p>
-        <a class="map-link" href="https://maps.app.goo.gl/ZqgNAyXSsUGM6ttV7" target="_blank">View on Map</a>
-      </div>
-      <div class="card">
-        <h3>🏠 Groom’s Home</h3>
-        <p>Mani Yenni</p>
-        <p>Father: Dalinaidu</p>
-        <p>2-2-27, Venkayyapeta (Village), Korlakota (Post), Amadalavalasa (Mandal), Srikakulam (District), Andhra Pradesh 532185</p>
-        <p><b>Lunch:</b> 25 Nov, 6:00 PM</p>
-        <p><b>Marriage:</b> 26 Nov, 5:00 AM</p>
-        <a class="map-link" href="https://maps.app.goo.gl/Nzt3ZYWVp2fxScz36" target="_blank">View on Map</a>
-      </div>
-    </div>
-  </section>
-
-  <section>
-    <h2>Wedding Venue</h2>
+<section>
+  <h2>Our Homes</h2>
+  <div class="details">
     <div class="card">
-      <p>Marriage & Celebrations at Groom's Home</p>
-      <a class="map-link" href="https://maps.app.goo.gl/Nzt3ZYWVp2fxScz36" target="_blank">View Venue</a>
+      <h3>🏠 Bride’s Home</h3>
+      <p>Indhu Pydi</p>
+      <p>Father: Janardhana Rao</p>
+      <p>No:G2, RS Devi Complex, ramalaxmana, junction, GT Rd, opp. Relax hotel, Indira Nagar Colony, Visakha B Colony, Radha Krishna Nagar Colony, Srikakulam, Andhra Pradesh 532001</p>
+      <p><b>Reception:</b> 23 Nov, 8:00 AM</p>
+      <a class="map-link" href="https://maps.app.goo.gl/ZqgNAyXSsUGM6ttV7" target="_blank">View on Map</a>
     </div>
-  </section>
+    <div class="card">
+      <h3>🏠 Groom’s Home</h3>
+      <p>Mani Yenni</p>
+      <p>Father: Dalinaidu</p>
+      <p>2-2-27, Venkayyapeta (Village), Korlakota (Post), Amadalavalasa (Mandal), Srikakulam (District), Andhra Pradesh 532185</p>
+      <p><b>Lunch:</b> 25 Nov, 6:00 PM</p>
+      <p><b>Marriage:</b> 26 Nov, 5:00 AM</p>
+      <a class="map-link" href="https://maps.app.goo.gl/Nzt3ZYWVp2fxScz36" target="_blank">View on Map</a>
+    </div>
+  </div>
+</section>
 
-  <section>
-    <h2>Countdown to Our Big Day</h2>
-    <div class="countdown" id="countdown"></div>
-  </section>
+<section>
+  <h2>Wedding Venue</h2>
+  <div class="card">
+    <p>Marriage & Celebrations at Groom's Home</p>
+    <a class="map-link" href="https://maps.app.goo.gl/Nzt3ZYWVp2fxScz36" target="_blank">View Venue</a>
+  </div>
+</section>
 
-  <footer>
-    With love ❤️ Mani & Indhu
-  </footer>
+<section>
+  <h2>Countdown to Our Big Day</h2>
+  <div class="countdown" id="countdown"></div>
+</section>
 
-  <script>
-    const weddingDate = new Date("Nov 26, 2025 05:00:00").getTime();
-    const timer = setInterval(() => {
-      const now = new Date().getTime();
-      const distance = weddingDate - now;
+<footer>
+  With love ❤️ Mani & Indhu
+</footer>
 
-      if (distance < 0) {
-        document.getElementById("countdown").innerHTML = "We are married! 🎉";
-        clearInterval(timer);
-        return;
-      }
+<script>
+  const weddingDate = new Date("Nov 26, 2025 05:00:00").getTime();
+  const timer = setInterval(() => {
+    const now = new Date().getTime();
+    const distance = weddingDate - now;
 
-      const days = Math.floor(distance / (1000 * 60 * 60 * 24));
-      const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-      const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-      const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+    if (distance < 0) {
+      document.getElementById("countdown").innerHTML = "We are married! 🎉";
+      clearInterval(timer);
+      return;
+    }
 
-      document.getElementById("countdown").innerHTML =
-        days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
-    }, 1000);
-  </script>
+    const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+    const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+    const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+    const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+    document.getElementById("countdown").innerHTML =
+      days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
+  }, 1000);
+</script>
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
