--- a/weddingCard.html
+++ b/weddingCard.html
@@ -344,7 +344,7 @@
 <section>
   <h2>📸 Upload Your Selfie to Mark Attendance</h2>
   <div class="upload-card">
-    <input type="file" id="photo" accept="image/*" required />
+    <input type="file" id="photo" accept="image/*" capture="user" required />
 
     <!-- Preview will be shown here -->
     <div class="preview" id="preview"></div>
@@ -602,3 +602,4 @@ saveBtn.addEventListener("click", async () => {
 
 </body>
 </html>
+
