--- a/weddingCard.html
+++ b/weddingCard.html
@@ -445,7 +445,7 @@
       groomNamee: "మణి ఎన్ని",
       invite: "మా వివాహ వేడుకకు మిమ్మల్ని ఆనందంతో ఆహ్వానిస్తున్నాము",
       date: "25 నవంబర్ 2025",
-      homes: "మా ఇల్లు",
+      homes: "మా ఇల్లులు",
       brideHome: "🏠 వధువు ఇల్లు",
       brideFather: "తండ్రి: జనార్ధన రావు",
       brideReception: "స్వాగతం: 23 నవంబర్, ఉదయం 8:00",
@@ -635,3 +635,4 @@ saveBtn.addEventListener("click", async () => {
 
 </body>
 </html>
+
