--- a/weddingCard.html
+++ b/weddingCard.html
@@ -310,48 +310,81 @@
   background: #c22d5d;
   transform: scale(1.05);
 }
-.carousel {
-  position: relative;
-  width: 600px;
-  height: 300px;
-  overflow: hidden;
-  margin: auto;
-  border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-}
+ .carousel {
+    position: relative;
+    width: 90%;
+    max-width: 600px;
+    aspect-ratio: 2 / 1; /* Keeps consistent height ratio */
+    overflow: hidden;
+    margin: auto;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  }
 
-.carousel-track {
-  display: flex;
-  transition: transform 0.6s ease-in-out; /* 👈 Sliding motion */
-}
+  .carousel-track {
+    display: flex;
+    transition: transform 0.6s ease-in-out;
+  }
 
-.carousel img {
-  width: 600px;
-  height: 300px;
-  flex-shrink: 0;
-  object-fit: cover;
-}
+  .carousel img {
+    width: 100%;
+    height: 100%;
+    flex-shrink: 0;
+    object-fit: cover;
+  }
 
-button {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background: rgba(0,0,0,0.5);
-  color: white;
-  border: none;
-  font-size: 2rem;
-  cursor: pointer;
-  padding: 5px 10px;
-  border-radius: 5px;
-}
+  button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    font-size: 2rem;
+    cursor: pointer;
+    padding: 5px 10px;
+    border-radius: 5px;
+    z-index: 2;
+  }
 
-button:hover {
-  background: rgba(0,0,0,0.7);
-}
+  button:hover {
+    background: rgba(0, 0, 0, 0.7);
+  }
 
-.prev { left: 10px; }
-.next { right: 10px; }
+  .prev {
+    left: 10px;
+  }
 
+  .next {
+    right: 10px;
+  }
+
+  /* 📱 Responsive Tweaks */
+  @media (max-width: 768px) {
+    h2 {
+      font-size: 1.5rem;
+    }
+
+    button {
+      font-size: 1.5rem;
+      padding: 4px 8px;
+    }
+  }
+
+  @media (max-width: 480px) {
+    h2 {
+      font-size: 1.3rem;
+    }
+
+    button {
+      font-size: 1.2rem;
+      padding: 3px 6px;
+    }
+
+    .carousel {
+      border-radius: 8px;
+    }
+  }
   </style>
    
 </head>
@@ -715,5 +748,6 @@ saveBtn.addEventListener("click", async () => {
 </script>
 </body>
 </html>
+
 
 
